сохранение пользователей в БД и проверка id-токена

--- a/.env
+++ b/.env
@@ -6,4 +6,10 @@ CLIENT_ID='60072192815-e9gp1tp69odvjg7tdtqconivbnuud0v2.apps.googleusercontent.c
 # В режиме локальной разработки можно заменить test на актуальное значение вручную.
 CLIENT_SECRET='test'
 
+# Хост, на который происходит редирект
+# c передачй code
 OAUTH_CALLBACK_HOST='http://localhost:3000'
+
+MONGO_DB_HOST=localhost
+MONGO_DB_NAME=test
+MONGO_DB_PORT=27017
