обновить описание env

--- a/.env
+++ b/.env
@@ -7,9 +7,14 @@ CLIENT_ID='60072192815-e9gp1tp69odvjg7tdtqconivbnuud0v2.apps.googleusercontent.c
 CLIENT_SECRET='test'
 
 # Хост, на который происходит редирект
-# c передачй code
+# c передачей code
 OAUTH_CALLBACK_HOST='http://localhost:3000'
 
+# Хост базы даных
 MONGO_DB_HOST=localhost
+
+# Название базы данных
 MONGO_DB_NAME=test
+
+# Порт базы данных
 MONGO_DB_PORT=27017
