--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,6 +20,13 @@
     "forceConsistentCasingInFileNames": true,
     "noImplicitAny": false,
     "strictBindCallApply": false,
-    "noFallthroughCasesInSwitch": false
-  }
+    "noFallthroughCasesInSwitch": false,
+    "paths": {
+      "src/*": ["src/*"]
+    }
+  },
+  "include": [
+    "src",
+    ".jest/setup.ts"
+  ]
 }
